--- a/src/components/ui/github-card.astro
+++ b/src/components/ui/github-card.astro
@@ -1,10 +1,9 @@
 ---
-import { Octokit } from '@octokit/rest';
+import octokit from '@/libs/octokit';
 import { BookIcon, GitForkIcon, StarIcon } from 'lucide-preact';
 
 type Props = { repo: string };
 
-const octokit = new Octokit({ auth: import.meta.env.GITHUB_TOKEN });
 const repo = await octokit.repos
   .get({ owner: import.meta.env.USERNAME, repo: Astro.props.repo })
   .then((res) => res.data);
