💬 remove some placeholder text

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -13,9 +13,7 @@ const posts = await getCollection('posts').then((posts) =>
   <div class="mx-auto mt-fluid-5 max-w-screen-lg">
     <section>
       <h1 class="text-3xl font-bold tracking-widest">BLOG POSTS</h1>
-      <p class="max-w-prose text-xs text-2">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-      </p>
+      <p class="max-w-prose text-xs text-2">Explore a variety posts about software.</p>
     </section>
     <Separator class="mb-10 mt-4" />
     <section>
