--- a/src/pages/career.astro
+++ b/src/pages/career.astro
@@ -22,9 +22,7 @@ const roles = await getCollection('roles').then(async (roles) =>
   <div class="mx-auto mt-fluid-5 max-w-screen-lg">
     <section>
       <h1 class="text-3xl font-bold tracking-widest">CAREER</h1>
-      <p class="max-w-prose text-xs text-2">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-      </p>
+      <p class="max-w-prose text-xs text-2">Explore relevant experience within the industry.</p>
     </section>
     <Separator class="mb-10 mt-4" />
     <section class="flex max-w-prose flex-col gap-10">
