--- a/src/components/post-views.astro
+++ b/src/components/post-views.astro
@@ -13,7 +13,7 @@ const { slug } = Astro.props;
 </div>
 
 <script define:vars={{ slug }}>
-fetch(`/blog`, { method: 'PUT', body: JSON.stringify({ slug }) })
+fetch(`/blog/api`, { method: 'PUT', body: JSON.stringify({ slug }) })
   .then((res) => res.json())
   .then((views) => {
     const el = document.querySelector(`[data-post-views="${slug}"]`);
