--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -91,6 +91,9 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
   [data-content] ol
     @apply list-decimal list-inside
 
+  [data-content] code:not([data-language])
+    @apply text-1 font-sans text-xxs border rounded px-1.5 py-0.5
+
   [data-content] details
     @apply bg-2 rounded border [&:not(:last-of-type)]:mb-3 px-4 py-1 text-xs
   [data-content] details[open]
