--- a/src/components/post-code.astro
+++ b/src/components/post-code.astro
@@ -1,5 +1,5 @@
 ---
-import { Check, Clipboard } from 'lucide-preact';
+import { Check, Clipboard } from 'lucide-astro';
 import { twJoin } from 'tailwind-merge';
 ---
 
