--- a/src/components/post-views.astro
+++ b/src/components/post-views.astro
@@ -1,6 +1,6 @@
 ---
 import type { CollectionEntry } from 'astro:content';
-import { EyeIcon } from 'lucide-preact';
+import { Eye } from 'lucide-astro';
 
 type Props = { slug: CollectionEntry<'posts'>['slug'] };
 
@@ -8,7 +8,7 @@ const { slug } = Astro.props;
 ---
 
 <div class="flex items-center gap-2 text-2">
-  <EyeIcon size={14} aria-hidden />
+  <Eye class="shrink-0" size={14} aria-hidden />
   <p><span data-post-views={slug} class="tracking-widest"></span> Views</p>
 </div>
 
