--- a/src/components/project-card.astro
+++ b/src/components/project-card.astro
@@ -1,6 +1,6 @@
 ---
 import octokit from '@/libs/octokit';
-import { BookIcon, EyeIcon, GitForkIcon, StarIcon } from 'lucide-preact';
+import { Book, Eye, GitFork, Star } from 'lucide-astro';
 import Link from './ui/link.astro';
 import Separator from './ui/separator.astro';
 
@@ -13,7 +13,7 @@ const repo = await octokit.repos
 
 <div class="rounded border">
   <div class="flex items-center gap-2 rounded-t border-b bg-2 px-2 py-1">
-    <BookIcon class="shrink-0 text-2" size={12} aria-hidden />
+    <Book class="shrink-0 text-2" size={12} aria-hidden />
     <span>{repo.name}</span>
   </div>
   <div class="flex flex-col gap-3 p-3 text-2">
@@ -25,15 +25,15 @@ const repo = await octokit.repos
     <div class="flex items-center justify-between gap-2 text-xxs">
       <div class="flex items-center gap-3">
         <div class="flex items-center gap-1">
-          <StarIcon class="shrink-0" size={14} aria-hidden />
+          <Star class="shrink-0" size={14} aria-hidden />
           {repo.stargazers_count}
         </div>
         <div class="flex items-center gap-1">
-          <GitForkIcon class="shrink-0" size={14} aria-hidden />
+          <GitFork class="shrink-0" size={14} aria-hidden />
           {repo.forks_count}
         </div>
         <div class="flex items-center gap-1">
-          <EyeIcon class="shrink-0" size={14} aria-hidden />
+          <Eye class="shrink-0" size={14} aria-hidden />
           {repo.watchers_count}
         </div>
       </div>
