--- a/src/components/ui/github-card.astro
+++ b/src/components/ui/github-card.astro
@@ -1,6 +1,6 @@
 ---
 import octokit from '@/libs/octokit';
-import { BookIcon, GitForkIcon, StarIcon } from 'lucide-preact';
+import { Book, GitFork, Star } from 'lucide-astro';
 
 type Props = { repo: string };
 
@@ -17,7 +17,7 @@ const repo = await octokit.repos
   class="group flex flex-col gap-1 rounded border p-4"
 >
   <div class="flex items-center gap-2 text-xs font-bold">
-    <BookIcon class="shrink-0" size={12} aria-hidden />
+    <Book class="shrink-0" size={12} aria-hidden />
     <span class="group-hover:text-emphasis motion-safe:transition-colors">{repo.name}</span>
   </div>
   <p class="text-xxs text-2">{repo.description}</p>
@@ -27,11 +27,11 @@ const repo = await octokit.repos
       {repo.language}
     </div>
     <div class="flex items-center gap-1">
-      <StarIcon class="shrink-0" size={14} aria-hidden />
+      <Star class="shrink-0" size={14} aria-hidden />
       {repo.stargazers_count}
     </div>
     <div class="flex items-center gap-1">
-      <GitForkIcon class="shrink-0" size={14} aria-hidden />
+      <GitFork class="shrink-0" size={14} aria-hidden />
       {repo.forks_count}
     </div>
   </div>
