--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -1,6 +1,6 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
-import { ArrowUpRightIcon } from 'lucide-preact';
+import { ArrowUpRight } from 'lucide-astro';
 import { twMerge } from 'tailwind-merge';
 
 type Props = HTMLAttributes<'a'>;
@@ -21,5 +21,5 @@ const external = href?.toString().startsWith('https://');
   )}
 >
   <slot />
-  {external && <ArrowUpRightIcon size={12} data-external-icon aria-hidden />}
+  {external && <ArrowUpRight size={12} data-external-icon aria-hidden />}
 </a>
