--- a/src/components/post-views.astro
+++ b/src/components/post-views.astro
@@ -7,9 +7,9 @@ type Props = { slug: CollectionEntry<'posts'>['slug'] };
 const { slug } = Astro.props;
 ---
 
-<div class="flex items-center gap-2 text-2">
+<div class="flex items-center gap-2 rounded border bg-2 px-2">
   <Eye class="shrink-0" size={14} aria-hidden />
-  <p><span data-post-views={slug} class="tracking-widest"></span> Views</p>
+  <p><span data-post-views={slug}></span> Views</p>
 </div>
 
 <script define:vars={{ slug }}>
