--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,14 @@
 import Me from '@/assets/me.webp';
 import PostCard from '@/components/post-card.astro';
 import ProjectCard from '@/components/project-card.astro';
+import Socials from '@/components/socials.astro';
 import Link from '@/components/ui/link.astro';
 import Separator from '@/components/ui/separator.astro';
 import Layout from '@/layouts/layout.astro';
 import { Image } from 'astro:assets';
 import { getCollection } from 'astro:content';
-import { ArrowRight, Github, Linkedin, Mail, Rss, Twitter } from 'lucide-astro';
+import { ArrowRight } from 'lucide-astro';
 
-const rssURL = new URL('rss.xml', import.meta.env.SITE);
 const projects = ['feedjoy', 'christianpenrod'];
 const posts = (await getCollection('posts'))
   .sort((a, b) => b.data.published.valueOf() - a.data.published.valueOf())
@@ -28,13 +28,7 @@ const posts = (await getCollection('posts'))
           <Link href={import.meta.env.COLLEGE}>LaRoche University</Link> with a Bachelors in
           Computer Science. Located in Pittsburgh, PA, USA.
         </p>
-        <ul class="flex text-2 [&_li_[data-external-icon]]:hidden [&_li_a]:px-2 [&_svg]:w-4">
-          <li><Link href={import.meta.env.GITHUB}><Github aria-label="Github" /></Link></li>
-          <li><Link href={import.meta.env.TWITTER}><Twitter aria-label="Twitter" /></Link></li>
-          <li><Link href={import.meta.env.LINKEDIN}><Linkedin aria-label="LinkedIn" /></Link></li>
-          <li><Link href={import.meta.env.EMAIL}><Mail aria-label="EMAIL" /></Link></li>
-          <li><Link href={rssURL}><Rss aria-label="RSS" /></Link></li>
-        </ul>
+        <Socials />
       </div>
       <div class="hidden h-[280px] w-[280px] rounded border-2 lg:block [&_img]:rounded">
         <Image src={Me} alt="Me" loading="eager" quality={100} width={2048} height={2048} />
