⚡️ reduce image sizes and convert to webp

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -90,7 +90,7 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
         <div class="text-xxs">
           <p class="font-bold tracking-wider">CHRISTIAN PENROD</p>
           <p class="text-2">Front-End Web Developer</p>
-          <div class="mt-1 [&_a]:!pr-2 [&_svg]:w-3"><Socials /></div>
+          <div class="mt-1 [&_a]:!pr-2 [&_svg]:!w-3"><Socials /></div>
         </div>
       </div>
     </aside>
