--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -86,7 +86,9 @@ const { remarkPluginFrontmatter, headings, Content } = await post.render();
         </ol>
       </div>
       <div class="flex items-start gap-4 p-4">
-        <Image class="shrink-0" src={Favicon} alt="Me" width={70} height={70} />
+        <div class="h-[70px] w-[70px]">
+          <Image class="shrink-0" src={Favicon} alt="Me" width={2048} height={2048} />
+        </div>
         <div class="text-xxs">
           <p class="font-bold tracking-wider">CHRISTIAN PENROD</p>
           <p class="text-2">Front-End Web Developer</p>
